--- a/Chart.yaml
+++ b/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for Kubernetes
 name: mychart
 type: application
 version: 0.1.0
+dependencies:
+  - name mychart
+    version: 0.1.0
+    repository: oci://harbor.test.myfaccloud-301.com/demogitops
